debug ansible ldap

--- a/AnsibleWorkShop/project/debug/New-LDAPObject.yml
+++ b/AnsibleWorkShop/project/debug/New-LDAPObject.yml
@@ -1,6 +1,6 @@
 # code: language=ansible
 ---
-- hosts: kube-1
+- hosts: localhost
   gather_facts: false
   vars: 
     ipa_hostname: ipa.infra.sololab
