--- a/AnsibleWorkShop/project/vars/podman_play-freeipa.yml
+++ b/AnsibleWorkShop/project/vars/podman_play-freeipa.yml
@@ -9,7 +9,9 @@ vars_podman_uri:
 
 vars_podman_play:
   state: present # absent / present
-  kube_file: /KubeWorkShop/FreeIPA/aio-freeipa.yaml
+  kube_file: 
+    host: localhost
+    path: /KubeWorkShop/FreeIPA/aio-freeipa.yaml
   absent:
     query_params:
       force: false
