--- a/AnsibleWorkShop/project/vars/podman_play-traefik.yml
+++ b/AnsibleWorkShop/project/vars/podman_play-traefik.yml
@@ -1,12 +1,27 @@
 # code: language=ansible
 ---
+vars_podman_host: kube-1
+
+vars_podman_uri:
+  scheme_authority: http://d # http://d/ ← (default), https://docs.podman.io/en/latest/markdown/podman-system-service.1.html
+  api_version: v4.4.1 # v4.0.0 ← (default)
+  unix_socket: /run/user/1000/podman/podman.sock # socket file path for podman, e.g. /run/user/1000/podman/podman.sock
+
 vars_podman_play:
-  kube_file: /KubeWorkShop/Traefik/aio-traefik.yaml
-  state: started # absent / created / started
-  force: true
-  
+  state: present # absent / present
+  kube_file: 
+    host: localhost
+    path: /KubeWorkShop/Traefik/aio-traefik-rendered.yaml
+  absent:
+    query_params:
+      force: "true"
+
 vars_podman_generate_systemd:
-  name: traefik
+  generate:
+    path_params: 
+      name: traefik
+    query_params:
+      useName: true
 
 vars_service:
   podman_pod:
