--- a/AnsibleWorkShop/project/roles/ansible-podman-rootless-play/tasks/Invoke-PodmanGenerateRequest.yml
+++ b/AnsibleWorkShop/project/roles/ansible-podman-rootless-play/tasks/Invoke-PodmanGenerateRequest.yml
@@ -9,9 +9,9 @@
     - name: Clean up the podman_generate_systemd query params dict
       ansible.builtin.set_fact:
         podman_generate_systemd_generate_query_params: "{{ {item.key: item.value} }}"
-      loop: "{{ podman_generate_systemd.get.query_params | dict2items }}"
+      loop: "{{ podman_generate_systemd.generate.query_params | dict2items }}"
       when:
-        - podman_generate_systemd.get.query_params is defined
+        - podman_generate_systemd.generate.query_params is defined
         - item.value is not none
 
     - name: Convert query_params from dict to string for podman_generate_systemd
@@ -147,7 +147,7 @@
       when: 
         # https://serverfault.com/questions/960575/ansible-conditionals-wildcard-match-string/985600#985600
         # https://docs.ansible.com/ansible/latest/playbook_guide/playbooks_variables.html#referencing-key-value-dictionary-variables
-        - item.key.startswith(podman_generate_systemd.get.query_params.podPrefix | default('pod'))
+        - item.key.startswith(podman_generate_systemd.generate.query_params.podPrefix | default('pod'))
       delegate_to: "{{ podman_host if ansible_host == 'localhost' else inventory_hostname }}"
 
 
@@ -159,13 +159,13 @@
     # https://stackoverflow.com/questions/38847824/ansible-how-to-get-service-status-by-ansible/69827034#69827034
     - name: Detect pod systemd service state
       ansible.builtin.systemd:
-        name: "{{ podman_generate_systemd.get.query_params.podPrefix | default('pod')}}-{{ podman_generate_systemd.generate.path_params.name }}.service"
+        name: "{{ podman_generate_systemd.generate.query_params.podPrefix | default('pod')}}-{{ podman_generate_systemd.generate.path_params.name }}.service"
         scope: user
       register: pod_service_status
 
     - name: Disable systemd service
       ansible.builtin.systemd:
-        name: "{{ podman_generate_systemd.get.query_params.podPrefix | default('pod')}}-{{ podman_generate_systemd.generate.path_params.name }}.service"
+        name: "{{ podman_generate_systemd.generate.query_params.podPrefix | default('pod')}}-{{ podman_generate_systemd.generate.path_params.name }}.service"
         state: stopped
         enabled: false
         scope: user
@@ -176,8 +176,8 @@
       ansible.builtin.find:
         paths: "{{ podman_generate_systemd.dest }}"
         patterns: 
-          - "{{ podman_generate_systemd.get.query_params.podPrefix | default('pod')}}-{{ podman_generate_systemd.generate.path_params.name }}.service"
-          - "{{ podman_generate_systemd.get.query_params.containerPrefix | default('container')}}-{{ podman_generate_systemd.generate.path_params.name }}*.service"
+          - "{{ podman_generate_systemd.generate.query_params.podPrefix | default('pod')}}-{{ podman_generate_systemd.generate.path_params.name }}.service"
+          - "{{ podman_generate_systemd.generate.query_params.containerPrefix | default('container')}}-{{ podman_generate_systemd.generate.path_params.name }}*.service"
       register: service_unit_to_delete
 
     - name: Delete pod related unit file
