--- a/KubeWorkShop/keycloak/aio-keycloak-offical.yaml
+++ b/KubeWorkShop/keycloak/aio-keycloak-offical.yaml
@@ -1,7 +1,19 @@
 apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: keycloak-postgresql-pvc
+spec:
+  resources:
+    requests:
+      storage: 20Gi
+  volumeMode: Filesystem
+  accessModes:
+    - ReadWriteOnce
+---
+apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: keycloak
+  name: keycloak-keycloak-cm
 data:
   freeipa-realm.json: |
     {
@@ -167,7 +179,11 @@ spec:
     - name: postgresql
       # https://hub.docker.com/_/postgres/tags?page=1
       image: docker.io/library/postgres:15-alpine
+      # https://hub.docker.com/r/bitnami/postgresql/tags?page=1
+      # image: docker.io/bitnami/postgresql:15
       imagePullPolicy: IfNotPresent
+      securityContext:
+        privileged: true
       resources:
         limits:
           memory: "128Mi"
@@ -178,18 +194,29 @@ spec:
       env:
         # https://github.com/docker-library/docs/tree/master/postgres#environment-variables
         - name: POSTGRES_USER
-          value: pg_keycloak
+          value: keycloak
         - name: POSTGRES_PASSWORD
           value: password
         - name: POSTGRES_DB
-          value: postgres_keycloak
+          value: keycloak
+
+        # https://github.com/bitnami/containers/tree/main/bitnami/postgresql#creating-a-database-user-on-first-run
+        # - name: POSTGRESQL_USERNAME
+        #   value: keycloak
+        # - name: POSTGRESQL_PASSWORD
+        #   value: password
+        # - name: POSTGRESQL_DATABASE
+        #   value: keycloak
       volumeMounts:
         - name: postgresql_data
+          # https://github.com/docker-library/docs/tree/master/postgres#pgdata
           mountPath: /var/lib/postgresql/data
+          # https://github.com/bitnami/containers/tree/main/bitnami/postgresql#persisting-your-database
+          # mountPath: /bitnami/postgresql
 
     - name: keycloak
       # https://quay.io/repository/keycloak/keycloak?tab=tags
-      image: quay.io/keycloak/keycloak:20.0
+      image: quay.io/keycloak/keycloak:21.0
       imagePullPolicy: IfNotPresent
       resources:
         limits:
@@ -200,26 +227,30 @@ spec:
           containerPort: 8080
         # - name: https
         #   containerPort: 8443
-      # https://www.keycloak.org/server/all-config
       # https://github.com/zak905/extending-keycloak-udemy-course/blob/fb271e99b7091ab39fcca76ef21387bdbb1407ce/docker-compose.yaml
       env:
-        # https://www.keycloak.org/server/configuration
+        # https://www.keycloak.org/server/configuration#_setup_of_the_initial_admin_user
         - name: KEYCLOAK_ADMIN
           value: admin
         - name: KEYCLOAK_ADMIN_PASSWORD
           value: password
 
-        - name: KC_DB
+        # https://www.keycloak.org/server/all-config#_database
+        - name: KC_DB # db
           value: postgres
-        - name: KC_DB_URL_HOST
+        - name: KC_DB_URL_HOST # db-url-host
           value: keycloak
-        - name: KC_DB_URL_DATABASE
-          value: postgres_keycloak
-        - name: KC_DB_USERNAME
-          value: bn_keycloak
-        - name: KC_DB_PASSWORD
+        - name: KC_DB_URL_DATABASE # db-url-database
+          value: keycloak
+        - name: KC_DB_USERNAME # db-username
+          value: keycloak
+        - name: KC_DB_PASSWORD # db-password
           value: password
 
+        # https://www.keycloak.org/server/all-config#_proxy
+        # https://www.keycloak.org/server/reverseproxy#_proxy_modes
+        - name: KC_PROXY # proxy
+          value: edge
         # production mode need hostname and tls cert
         # hostname will force redirect url to the fqdn of
         # hostname value in browser
@@ -237,15 +268,15 @@ spec:
         - '--import-realm'
       volumeMounts:
         - name: keycloak_config
-          mountPath: /opt/keycloak/data/import/
+          mountPath: /opt/keycloak/data/import/freeipa-realm.json
+          subPath: freeipa-realm.json
   volumes:
     - name: postgresql_data
-      hostPath:
-        path: /home/vagrant/infra/keycloak/postgresql/
-        type: Directory
+      persistentVolumeClaim:
+        claimName: keycloak-postgresql-pvc
     - name: keycloak_config
       configMap:
-        name: keycloak
+        name: keycloak-keycloak-cm
         items:
           - key: freeipa-realm.json
             path: freeipa-realm.json
