--- a/KubeWorkShop/Traefik/aio-traefik.yaml
+++ b/KubeWorkShop/Traefik/aio-traefik.yaml
@@ -27,11 +27,11 @@ data:
       # https://doc.traefik.io/traefik/routing/routers/#configuration-example
       web:
         address: ":80"
-        http:
-          redirections:
-            entryPoint:
-              to: websecure
-              scheme: https
+        # http:
+        #   redirections:
+        #     entryPoint:
+        #       to: websecure
+        #       scheme: https
       websecure:
         address: ":443"
 
