--- a/AnsibleWorkShop/project/vars/podman_play-traefik.yml
+++ b/AnsibleWorkShop/project/vars/podman_play-traefik.yml
@@ -14,7 +14,7 @@ vars_podman_play:
     path: /KubeWorkShop/Traefik/aio-traefik-rendered.yaml
   absent:
     query_params:
-      force: "true"
+      force: false
 
 vars_podman_generate_systemd:
   generate:
