--- a/KubeWorkShop/keycloak/traefik-keycloak.yaml
+++ b/KubeWorkShop/keycloak/traefik-keycloak.yaml
@@ -8,7 +8,8 @@ http:
         - websecure
       service: keycloak
       # https://doc.traefik.io/traefik/routing/routers/#tls
-      tls: true
+      tls: 
+        certResolver: freeipa
   # middlewares:
   #   subpath-stripprefixregex:
   #     # https://doc.traefik.io/traefik/middlewares/http/stripprefixregex/
