--- a/AnsibleWorkShop/project/vars/podman_play-minio.yml
+++ b/AnsibleWorkShop/project/vars/podman_play-minio.yml
@@ -12,10 +12,11 @@ vars_podman_play:
   timeout: 600
   kube_file: 
     host: localhost
-    path: /KubeWorkShop/MinIO/aio-minio-rendered.yaml
+    # path: /KubeWorkShop/MinIO/aio-minio-rendered.yaml
+    content: "{{ rendered }}"
   absent:
     query_params:
-      force: true
+      force: false
 
 vars_podman_generate_systemd:
   generate:
