--- a/AnsibleWorkShop/project/vars/podman_play-traefik.yml
+++ b/AnsibleWorkShop/project/vars/podman_play-traefik.yml
@@ -11,7 +11,8 @@ vars_podman_play:
   state: present # absent / present
   kube_file: 
     host: localhost
-    path: /KubeWorkShop/Traefik/aio-traefik-rendered.yaml
+    # path: /KubeWorkShop/Traefik/aio-traefik-rendered.yaml
+    content: "{{ rendered }}"
   absent:
     query_params:
       force: false
