--- a/KubeWorkShop/MinIO/aio-minio-rendered.yaml
+++ b/KubeWorkShop/MinIO/aio-minio-rendered.yaml
@@ -62,7 +62,7 @@ metadata:
   labels:
     name: minio
 spec:
-  # initContainers:
+  initContainers:
   #   - name: mc
   #     image: quay.io/minio/mc:latest
   #     imagePullPolicy: IfNotPresent
@@ -74,6 +74,16 @@ spec:
   #     volumeMounts:
   #       - name: mc
   #         mountPath: /mnt/bin/
+  
+  # https://varlogdiego.com/kubernetes-wait-until-another-pod-is-ready
+    - name: wait-for-keycloak
+      image: docker.io/curlimages/curl:8.00.1
+      imagePullPolicy: IfNotPresent
+      command: 
+        - "/bin/sh"
+        - "-c"
+      args: 
+        - "while [ $(curl -sw '200' -k -x GET https://keycloak.infra.sololab/realms/freeipa-realm/.well-known/openid-configuration -o /dev/null) -ne 200 ]; do sleep 5; echo 'Waiting for the keycloak...'; done"
   containers:
     - name: minio
       image: quay.io/minio/minio:RELEASE.2023-03-24T21-41-23Z
@@ -82,11 +92,6 @@ spec:
         limits:
           memory: "128Mi"
           cpu: "500m"
-      # ports:
-      #   - name: minio
-      #     containerPort: 9000
-      #     hostIP: 192.168.255.32
-      #     hostPort: 9000
       env:
         # https://blog.csdn.net/weixin_45395031/article/details/119273223
         # https://github.com/minio/minio/tree/master/docs/config#credentials
@@ -101,6 +106,7 @@ spec:
         - name: MINIO_UPDATE
           value: off
         # https://min.io/docs/minio/linux/reference/minio-server/minio-server.html#envvar.MINIO_BROWSER_REDIRECT_URL
+        # should match with the url config
         - name: MINIO_BROWSER_REDIRECT_URL
           value: https://minio.infra.sololab/console/
       # https://blog.csdn.net/fly910905/article/details/104706105
@@ -118,6 +124,7 @@ spec:
         - '/mnt/certs'
         # https://min.io/docs/minio/linux/reference/minio-server/minio-server.html#minio.server.DIRECTORIES
         - '/data'
+
       # https://github.com/minio/console/issues/2681
       startupProbe:
         exec:
@@ -126,13 +133,14 @@ spec:
         successThreshold: 1
         initialDelaySeconds: 0
         periodSeconds: 1
+      # https://min.io/docs/minio/linux/operations/monitoring/healthcheck-probe.html#node-liveness
       livenessProbe:
         httpGet:
           path: /minio/health/live
           port: 9000
           scheme: HTTP
         initialDelaySeconds: 120
-        periodSeconds: 30
+        periodSeconds: 1800
         timeoutSeconds: 10
         successThreshold: 1
         failureThreshold: 3
